--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <title>Frontend Mentor | Interactive rating component</title>
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="./css/master.css">
   </head>
   <body>
     <div class="container">
       <div class="rating card">
         <span class="star-box">
           <svg class="icon star">
-            <use xlink:href="images/sprite.svg#star"></use>
+            <use xlink:href="./images/sprite.svg#star"></use>
           </svg>
         </span>
         <h2>How did we do?</h2>
@@ -32,7 +32,7 @@
     
       <div class="thanks card">
         <svg class="icon mobile">
-          <use xlink:href="images/sprite.svg#thank"></use>
+          <use xlink:href="./images/sprite.svg#thank"></use>
         </svg>
         <p class="result"></p>
         <h2>Thank you!</h2> 
@@ -42,6 +42,6 @@
         </p>
       </div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
