--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
         </p>
       </div>
     </div>
-    <script src="./js/main.js"></script>
+    <script src="./JS/main.js"></script>
   </body>
 </html>
